--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@openzeppelin/contracts": "^4.8.0",
+    "hardhat": "^2.12.5",
     "typescript": "4.1.3"
   },
   "scripts": {
