--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "1.0.0-alpha.7",
     "react-router-dom": "^6.6.1",
-    "react-scripts": "^4.0.0"
+    "react-scripts": "^4.0.0",
+    "react-toastify": "^8.0.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
